--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,20 +8,20 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-	<link rel="stylesheet" href="{% static 'css/open-iconic-bootstrap.min.css' %}">
-	<link rel="stylesheet" href="{% static 'css/animate.css' %}">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/animate.css">
 
-	<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-	<link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-	<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/magnific-popup.css">
 
-	<link rel="stylesheet" href="{% static 'css/aos.css' %}">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/aos.css">
 
-	<link rel="stylesheet" href="{% static 'css/ionicons.min.css' %}">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/ionicons.min.css">
 
-	<link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
-	<link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/flaticon.css">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/icomoon.css">
+	<link rel="stylesheet" href="https://winneremeto.pythonanywhere.com/static/css/style.css">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -619,20 +619,20 @@
 				stroke="#F96D00" /></svg></div>
 
 
-	<script src="{% static 'js/jquery.min.js' %}"></script>
-	<script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
-	<script src="{% static 'js/popper.min.js' %}"></script>
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-	<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-	<script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-	<script src="{% static 'js/owl.carousel.min.js' %}"></script>
-	<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-	<script src="{% static 'js/aos.js' %}"></script>
-	<script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
-	<script src="{% static 'js/scrollax.min.js' %}"></script>
+	<script src="{% static 'js/jquery.min.js"></script>
+	<script src="{% static 'js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="{% static 'js/popper.min.js"></script>
+	<script src="{% static 'js/bootstrap.min.js"></script>
+	<script src="{% static 'js/jquery.easing.1.3.js"></script>
+	<script src="{% static 'js/jquery.waypoints.min.js"></script>
+	<script src="{% static 'js/jquery.stellar.min.js"></script>
+	<script src="{% static 'js/owl.carousel.min.js"></script>
+	<script src="{% static 'js/jquery.magnific-popup.min.js"></script>
+	<script src="{% static 'js/aos.js"></script>
+	<script src="{% static 'js/jquery.animateNumber.min.js"></script>
+	<script src="{% static 'js/scrollax.min.js"></script>
 
-	<script src="{% static 'js/main.js' %}"></script>
+	<script src="{% static 'js/main.js"></script>
 
 </body>
 
